Trying to make tailwind work in production

--- a/styles/index.css
+++ b/styles/index.css
@@ -1,6 +1,10 @@
-@tailwind base;
-@tailwind components;
+/* purgecss start ignore */
+@tailwind  base;
+@tailwind  components;
+/* purgecss end ignore */
+
 @tailwind utilities;
+
 
 body {
   @apply p-12;
