--- a/styles/index.css
+++ b/styles/index.css
@@ -1,3 +1,7 @@
+/* =============================================================================
+ * Copyright © 2020 Luke Pierce. All rights reserved.
+ * ============================================================================= */
+
 body {
   @apply p-12;
   padding: 0;
